--- a/elitPostel/html/catalog.html
+++ b/elitPostel/html/catalog.html
@@ -905,26 +905,26 @@
                             <div class="row">
                                 <div class="col col--8-of-12 col--xs-4-of-4 col--sm-4-of-4 col--md-4-of-4 col--lg-1-of-2">
                                     <div class="row">
-                                        <div class="col col--6-of-12 col--xs-4-of-4 col--sm-4-of-4 col--md-4-of-4 col--lg-4-of-4">
+                                        <div class="col col--7-of-12 col--xs-4-of-4 col--sm-4-of-4 col--md-4-of-4 col--lg-4-of-4">
                                             <div class="catalog__filter-sort">
                                                 <span class="filter-sort__label">сортировать по</span>
                                                 <span class="field--select-wrap">
-                                                    <select class="field field--select field--select-small" id="filter-sort"
+                                                    <select class="field field--select field--select-small" id="filter-sort-1"
                                                             name="filter-sort">
-                                                        <option value="1" selected="selected">1</option>
-                                                        <option value="2">2</option>
-                                                        <option value="3">3</option>
-                                                        <option value="4">4</option>
-                                                        <option value="5">5</option>
+                                                        <option value="1" selected="selected">Цене / возр</option>
+                                                        <option value="2">Цене / возр</option>
+                                                        <option value="3">Цене / возр</option>
+                                                        <option value="4">Цене / возр</option>
+                                                        <option value="5">Цене / возр</option>
                                                     </select>
                                                 </span>
                                             </div>
                                         </div>
-                                        <div class="col col--6-of-12 col--xs-4-of-4 col--sm-4-of-4 col--md-4-of-4 col--lg-4-of-4">
+                                        <div class="col col--5-of-12 col--xs-4-of-4 col--sm-4-of-4 col--md-4-of-4 col--lg-4-of-4">
                                             <div class="catalog__filter-number">
                                                 <span class="filter-sort__label">товаров на странице</span>
                                                 <span class="field--select-wrap">
-                                                    <select class="field field--select field--select-small" id="filter-number"
+                                                    <select class="field field--select field--select-small" id="filter-number-1"
                                                             name="filter-number">
                                                         <option value="1" selected="selected">1</option>
                                                         <option value="2">2</option>
@@ -1446,26 +1446,26 @@
                             <div class="row">
                                 <div class="col col--8-of-12 col--xs-4-of-4 col--sm-4-of-4 col--md-4-of-4 col--lg-1-of-2">
                                     <div class="row">
-                                        <div class="col col--6-of-12 col--xs-4-of-4 col--sm-4-of-4 col--md-4-of-4 col--lg-4-of-4">
+                                        <div class="col col--7-of-12 col--xs-4-of-4 col--sm-4-of-4 col--md-4-of-4 col--lg-4-of-4">
                                             <div class="catalog__filter-sort">
                                                 <span class="filter-sort__label">сортировать по</span>
                                                 <span class="field--select-wrap">
-                                                    <select class="field field--select field--select-small" id="filter-sort"
+                                                    <select class="field field--select field--select-small" id="filter-sort-2"
                                                             name="filter-sort">
-                                                        <option value="1" selected="selected">1</option>
-                                                        <option value="2">2</option>
-                                                        <option value="3">3</option>
-                                                        <option value="4">4</option>
-                                                        <option value="5">5</option>
+                                                        <option value="1" selected="selected">Цене / возр</option>
+                                                        <option value="2">Цене / возр</option>
+                                                        <option value="3">Цене / возр</option>
+                                                        <option value="4">Цене / возр</option>
+                                                        <option value="5">Цене / возр</option>
                                                     </select>
                                                 </span>
                                             </div>
                                         </div>
-                                        <div class="col col--6-of-12 col--xs-4-of-4 col--sm-4-of-4 col--md-4-of-4 col--lg-4-of-4">
+                                        <div class="col col--5-of-12 col--xs-4-of-4 col--sm-4-of-4 col--md-4-of-4 col--lg-4-of-4">
                                             <div class="catalog__filter-number">
                                                 <span class="filter-sort__label">товаров на странице</span>
                                                 <span class="field--select-wrap">
-                                                    <select class="field field--select field--select-small" id="filter-number"
+                                                    <select class="field field--select field--select-small" id="filter-number-2"
                                                             name="filter-number">
                                                         <option value="1" selected="selected">1</option>
                                                         <option value="2">2</option>
