--- a/codeStandards/app/html/general.html
+++ b/codeStandards/app/html/general.html
@@ -15,31 +15,33 @@
 
     <!-- START page-name -->
     <div class="page-name">
-        <div class="page-name__text">General</div>
+        <div class="page-name__container">
+            <div class="page-name__text">General</div>
 
-        <!-- START footer -->
-        <div class="hamburger js-hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
+            <!-- START footer -->
+            <div class="hamburger js-hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <nav class="menu">
+                <ul class="menu__list">
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="general.html">General</a>
+                    </li>
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="bem.html">BEM naming</a>
+                    </li>
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="css.html">CSS</a>
+                    </li>
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="graphic.html">Graphic</a>
+                    </li>
+                </ul>
+            </nav>
+            <!-- END footer -->
         </div>
-        <nav class="menu">
-            <ul class="menu__list">
-                <li class="menu__list-item">
-                    <a class="menu__list-link" href="general.html">General</a>
-                </li>
-                <li class="menu__list-item">
-                    <a class="menu__list-link" href="bem.html">BEM naming</a>
-                </li>
-                <li class="menu__list-item">
-                    <a class="menu__list-link" href="css.html">CSS</a>
-                </li>
-                <li class="menu__list-item">
-                    <a class="menu__list-link" href="graphic.html">Graphic</a>
-                </li>
-            </ul>
-        </nav>
-        <!-- END footer -->
     </div>
     <!-- END page-name -->
 
